--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -23,8 +23,22 @@
 }
 
 .list {
+  position: absolute;
   list-style: none;
   margin: 0;
+  white-space: nowrap;
+  width: 100%;
+  overflow-x: auto;
+}
+
+.list::-webkit-scrollbar {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+.list::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 10px;
 }
 
 .list__item {
