--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -53,6 +53,16 @@
   transition: 0.2s;
 }
 
+.description {
+  position: absolute;
+  bottom: 0;
+  padding: 30px;
+  font-size: 1.2em;
+  right: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 @media only screen and (max-width: 500px) {
   .navbar {
     background-image: none;
